src/ParSyntax.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParSyntax.y
-----------------------------------------------------------------------------

state 146 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pListDec_internal -> ListDec                (0)
	Integer -> L_integ                                 (1)
	String -> L_quoted                                 (2)
	Id -> L_Id                                         (3)
	IdCap -> L_IdCap                                   (4)
	IdVar -> L_IdVar                                   (5)
	Con -> Integer                                     (6)
	Con -> String                                      (7)
	Con -> '(' ')'                                     (8)
	Exp11 -> Con                                       (9)
	Exp11 -> IdCap                                     (10)
	Exp11 -> Id                                        (11)
	Exp11 -> '(' Exp ',' ListExp ')'                   (12)
	Exp11 -> '[' ListExp ']'                           (13)
	Exp11 -> '(' Exp ')'                               (14)
	ListExp ->                                         (15)
	ListExp -> Exp                                     (16)
	ListExp -> Exp ',' ListExp                         (17)
	Exp10 -> Exp10 Exp11                               (18)
	Exp10 -> Exp11                                     (19)
	Exp9 -> '-' Exp10                                  (20)
	Exp9 -> Exp10                                      (21)
	Exp8 -> Exp8 '*' Exp9                              (22)
	Exp8 -> Exp8 '/' Exp9                              (23)
	Exp8 -> Exp9                                       (24)
	Exp7 -> Exp7 '+' Exp8                              (25)
	Exp7 -> Exp7 '-' Exp8                              (26)
	Exp7 -> Exp8                                       (27)
	Exp6 -> Exp7 '::' Exp6                             (28)
	Exp6 -> Exp7                                       (29)
	Exp5 -> Exp6 '@' Exp5                              (30)
	Exp5 -> Exp6 '^' Exp5                              (31)
	Exp5 -> Exp6                                       (32)
	Exp4 -> Exp5 ERelOp Exp5                           (33)
	Exp4 -> Exp5                                       (34)
	ERelOp -> '=='                                     (35)
	ERelOp -> '!='                                     (36)
	ERelOp -> '<'                                      (37)
	ERelOp -> '<='                                     (38)
	ERelOp -> '>'                                      (39)
	ERelOp -> '>='                                     (40)
	Exp3 -> Exp3 '&&' Exp4                             (41)
	Exp3 -> Exp4                                       (42)
	Exp2 -> Exp2 '||' Exp3                             (43)
	Exp2 -> Exp3                                       (44)
	Exp1 -> 'if' Exp 'then' Exp 'else' Exp1            (45)
	Exp1 -> Exp2                                       (46)
	Exp -> 'let' ListLetBind 'in' Exp                  (47)
	Exp -> 'case' Exp 'of' ListECaseBind               (48)
	Exp -> 'case' Exp 'of' '|' ListECaseBind           (49)
	Exp -> 'fn' ListId '->' Exp                        (50)
	Exp -> Exp1                                        (51)
	ECaseBind -> Pat '->' Exp                          (52)
	ListECaseBind -> ECaseBind                         (53)
	ListECaseBind -> ECaseBind '|' ListECaseBind       (54)
	ListId -> Id                                       (55)
	ListId -> Id ListId                                (56)
	Pat3 -> Con                                        (57)
	Pat3 -> Id                                         (58)
	Pat3 -> '_'                                        (59)
	Pat3 -> '(' Pat ',' ListPat ')'                    (60)
	Pat3 -> '[' ListPat ']'                            (61)
	Pat3 -> IdCap                                      (62)
	Pat3 -> '(' Pat ')'                                (63)
	ListPat ->                                         (64)
	ListPat -> Pat                                     (65)
	ListPat -> Pat ',' ListPat                         (66)
	Pat1 -> IdCap Pat2                                 (67)
	Pat1 -> Pat2                                       (68)
	Pat -> Pat1 '::' Pat                               (69)
	Pat -> Pat1                                        (70)
	Pat2 -> Pat3                                       (71)
	Typ3 -> IdVar                                      (72)
	Typ3 -> TypLst Id                                  (73)
	Typ3 -> '(' Typ ')'                                (74)
	TypLst ->                                          (75)
	TypLst -> Typ3                                     (76)
	TypLst -> '(' Typ ',' ListTyp ')'                  (77)
	ListTyp -> Typ                                     (78)
	ListTyp -> Typ ',' ListTyp                         (79)
	Typ1 -> Typ2 '*' ListTTupElem                      (80)
	Typ1 -> Typ2                                       (81)
	TTupElem -> Typ2                                   (82)
	ListTTupElem -> TTupElem                           (83)
	ListTTupElem -> TTupElem '*' ListTTupElem          (84)
	Typ -> Typ1 '->' Typ                               (85)
	Typ -> Typ1                                        (86)
	Typ2 -> Typ3                                       (87)
	Dec -> 'let' ListLetBind                           (88)
	Dec -> 'type' ListTypBind                          (89)
	Dec -> 'exception' ListExnBind                     (90)
	Dec -> 'open' ListIdCap                            (91)
	ListIdCap -> IdCap                                 (92)
	ListIdCap -> IdCap 'and' ListIdCap                 (93)
	ListDec ->                                         (94)
	ListDec -> Dec ListDec                             (95)
	LetBind -> Id '=' Exp                              (96)
	LetBind -> '_' '=' Exp                             (97)
	ListLetBind -> LetBind                             (98)
	ListLetBind -> LetBind 'and' ListLetBind           (99)
	TypBind -> TypLst Id '=' ListDTag                  (100)
	TypBind -> TypLst Id '=' '|' ListDTag              (101)
	ListTypBind -> TypBind                             (102)
	ListTypBind -> TypBind 'and' ListTypBind           (103)
	DTag -> IdCap                                      (104)
	DTag -> IdCap 'of' Typ                             (105)
	ListDTag -> DTag                                   (106)
	ListDTag -> DTag '|' ListDTag                      (107)
	ExnBind -> IdCap                                   (108)
	ExnBind -> IdCap 'of' Typ                          (109)
	ListExnBind -> ExnBind                             (110)
	ListExnBind -> ExnBind 'and' ListExnBind           (111)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	','            { PT _ (TS _ 7) }
	'-'            { PT _ (TS _ 8) }
	'->'           { PT _ (TS _ 9) }
	'/'            { PT _ (TS _ 10) }
	'::'           { PT _ (TS _ 11) }
	'<'            { PT _ (TS _ 12) }
	'<='           { PT _ (TS _ 13) }
	'='            { PT _ (TS _ 14) }
	'=='           { PT _ (TS _ 15) }
	'>'            { PT _ (TS _ 16) }
	'>='           { PT _ (TS _ 17) }
	'@'            { PT _ (TS _ 18) }
	'['            { PT _ (TS _ 19) }
	']'            { PT _ (TS _ 20) }
	'^'            { PT _ (TS _ 21) }
	'_'            { PT _ (TS _ 22) }
	'and'          { PT _ (TS _ 23) }
	'case'         { PT _ (TS _ 24) }
	'else'         { PT _ (TS _ 25) }
	'exception'    { PT _ (TS _ 26) }
	'fn'           { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'in'           { PT _ (TS _ 29) }
	'let'          { PT _ (TS _ 30) }
	'of'           { PT _ (TS _ 31) }
	'open'         { PT _ (TS _ 32) }
	'then'         { PT _ (TS _ 33) }
	'type'         { PT _ (TS _ 34) }
	'|'            { PT _ (TS _ 35) }
	'||'           { PT _ (TS _ 36) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }
	L_Id           { PT _ (T_Id _) }
	L_IdCap        { PT _ (T_IdCap _) }
	L_IdVar        { PT _ (T_IdVar _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pListDec_internal rule  0
	Integer         rule  1
	String          rule  2
	Id              rule  3
	IdCap           rule  4
	IdVar           rule  5
	Con             rules 6, 7, 8
	Exp11           rules 9, 10, 11, 12, 13, 14
	ListExp         rules 15, 16, 17
	Exp10           rules 18, 19
	Exp9            rules 20, 21
	Exp8            rules 22, 23, 24
	Exp7            rules 25, 26, 27
	Exp6            rules 28, 29
	Exp5            rules 30, 31, 32
	Exp4            rules 33, 34
	ERelOp          rules 35, 36, 37, 38, 39, 40
	Exp3            rules 41, 42
	Exp2            rules 43, 44
	Exp1            rules 45, 46
	Exp             rules 47, 48, 49, 50, 51
	ECaseBind       rule  52
	ListECaseBind   rules 53, 54
	ListId          rules 55, 56
	Pat3            rules 57, 58, 59, 60, 61, 62, 63
	ListPat         rules 64, 65, 66
	Pat1            rules 67, 68
	Pat             rules 69, 70
	Pat2            rule  71
	Typ3            rules 72, 73, 74
	TypLst          rules 75, 76, 77
	ListTyp         rules 78, 79
	Typ1            rules 80, 81
	TTupElem        rule  82
	ListTTupElem    rules 83, 84
	Typ             rules 85, 86
	Typ2            rule  87
	Dec             rules 88, 89, 90, 91
	ListIdCap       rules 92, 93
	ListDec         rules 94, 95
	LetBind         rules 96, 97
	ListLetBind     rules 98, 99
	TypBind         rules 100, 101
	ListTypBind     rules 102, 103
	DTag            rules 104, 105
	ListDTag        rules 106, 107
	ExnBind         rules 108, 109
	ListExnBind     rules 110, 111

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pListDec_internal -> . ListDec               (rule 0)

	'exception'    shift, and enter state 5
	'let'          shift, and enter state 6
	'open'         shift, and enter state 7
	'type'         shift, and enter state 8
	%eof           reduce using rule 94

	Dec            goto state 3
	ListDec        goto state 4

State 1

	Integer -> . L_integ                                (rule 1)

	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'->'           reduce using rule 1
	'/'            reduce using rule 1
	'::'           reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'@'            reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'and'          reduce using rule 1
	'else'         reduce using rule 1
	'exception'    reduce using rule 1
	'in'           reduce using rule 1
	'let'          reduce using rule 1
	'of'           reduce using rule 1
	'open'         reduce using rule 1
	'then'         reduce using rule 1
	'type'         reduce using rule 1
	'|'            reduce using rule 1
	'||'           reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1
	L_Id           reduce using rule 1
	L_IdCap        reduce using rule 1
	%eof           reduce using rule 1


State 3

	ListDec -> Dec . ListDec                            (rule 95)

	'exception'    shift, and enter state 5
	'let'          shift, and enter state 6
	'open'         shift, and enter state 7
	'type'         shift, and enter state 8
	%eof           reduce using rule 94

	Dec            goto state 3
	ListDec        goto state 27

State 4

	%start_pListDec_internal -> ListDec .               (rule 0)

	%eof           accept


State 5

	Dec -> 'exception' . ListExnBind                    (rule 90)

	L_IdCap        shift, and enter state 18

	IdCap          goto state 24
	ExnBind        goto state 25
	ListExnBind    goto state 26

State 6

	Dec -> 'let' . ListLetBind                          (rule 88)

	'_'            shift, and enter state 22
	L_Id           shift, and enter state 23

	Id             goto state 19
	LetBind        goto state 20
	ListLetBind    goto state 21

State 7

	Dec -> 'open' . ListIdCap                           (rule 91)

	L_IdCap        shift, and enter state 18

	IdCap          goto state 16
	ListIdCap      goto state 17

State 8

	Dec -> 'type' . ListTypBind                         (rule 89)

	'('            shift, and enter state 14
	L_Id           reduce using rule 75
	L_IdVar        shift, and enter state 15

	IdVar          goto state 9
	Typ3           goto state 10
	TypLst         goto state 11
	TypBind        goto state 12
	ListTypBind    goto state 13

State 9

	Typ3 -> IdVar .                                     (rule 72)

	')'            reduce using rule 72
	'*'            reduce using rule 72
	','            reduce using rule 72
	'->'           reduce using rule 72
	'and'          reduce using rule 72
	'exception'    reduce using rule 72
	'let'          reduce using rule 72
	'open'         reduce using rule 72
	'type'         reduce using rule 72
	'|'            reduce using rule 72
	L_Id           reduce using rule 72
	%eof           reduce using rule 72


State 10

	TypLst -> Typ3 .                                    (rule 76)

	L_Id           reduce using rule 76


State 11

	Typ3 -> TypLst . Id                                 (rule 73)
	TypBind -> TypLst . Id '=' ListDTag                 (rule 100)
	TypBind -> TypLst . Id '=' '|' ListDTag             (rule 101)
